language/move-lang/tests/move_check/liveness/dead_refs_branch_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_branch_invalid.move:8:13 ───
   │
 8 │         _ = x;
   │             ^ Invalid copy of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

   ┌── tests/move_check/liveness/dead_refs_branch_invalid.move:9:13 ───
   │
 9 │         _ = move x;
   │             ^^^^^^ Invalid move of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_branch_invalid.move:20:13 ───
    │
 20 │         _ = x;
    │             ^ Invalid copy of local 'x'
    ·
 15 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_branch_invalid.move:21:13 ───
    │
 21 │         _ = move x;
    │             ^^^^^^ Invalid move of local 'x'
    ·
 15 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

